# chair

./: .gitignore  README.md
backend/: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembicDockerfile  db.env.example  docker-compose.yaml  migrations.Dockerfile  pyproject.toml
backend/chair_api/: __init__.py  __main__.py  fastapi_init.py  version.py
backend/chair_api/config/: __init__.py  app_settings_global.py
backend/chair_api/db/: __init__.py  alembic.ini
backend/chair_api/db/connection/: __init__.py  session.py
backend/chair_api/db/entities/: __init__.py  enums.py  product_media.py  product_types.py  products.py
backend/chair_api/db/migrations/: env.py
backend/chair_api/db/migrations/versions/: 2b88f2d8bd8c_inital_migration.py  87c2e599d2fc_fix_products_schema.py
backend/chair_api/dto/: __init__.py  products.py
backend/chair_api/endpoints/: healthcheck.py  products.py  redirect_to_swagger.py  routers.py
backend/chair_api/exceptions/: __init__.py  base.py
backend/chair_api/exceptions/logic/: common.py
backend/chair_api/logic/: __init__.py  products.py
backend/chair_api/schemas/: __init__.py  bacis_responses.py  products.py
frontend/: .gitignore  App.js  README.md  app.json  package-lock.json  package.json
frontend/components/: BottomNavigation.js
frontend/components/catalog/: FilterOptions.js  Header.js  ProductList.js  index.js
frontend/components/icons/: Catalog.js  CubeFocus.js  FeedbackButton.js  Filters.js  Heart.js  HeartButton.js  ProductHeart.js  SearchCube.js  User.js  index.js
frontend/components/product/: ARButtons.js  Header.js  ProductImage.js  ProductInfo.js  index.js
frontend/screens/: CatalogScreen.js  FavouritesScreen.js  HomeScreen.js  ProductScreen.js  TryOnScreen.js  UserProfileScreen.js  index.js
