[tool.poetry]
name = "chair_api"
version = "0.1.0"
description = "Mobile app Chair is a marketplace for the sale of furniture and household goods"
authors = ["Babayev Ruslan <rus.babaef@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.1"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
pydantic = "^2.7.0"
sqlalchemy = {version = "^2.0.29", extras = ["asyncio"]}
asyncio = "^3.4.3"
uvicorn = "^0.29.0"
loguru = "^0.7.2"
pytest = "^8.1.1"
httpx = "^0.27.0"

[tool.poetry.scripts]
launch_chair_api = "chair_api.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
