[tool.poetry]
name = "chair_api"
version = "0.2.0"
description = "Mobile app Chair is a marketplace for the sale of furniture and household goods"
authors = ["Babayev Ruslan <rus.babaef@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.1"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
pydantic = "^2.7.0"
sqlalchemy = {version = "^2.0.29", extras = ["asyncio"]}
asyncio = "^3.4.3"
uvicorn = "^0.29.0"
loguru = "^0.7.2"
pytest = "^8.1.1"
httpx = "^0.27.0"
pandas = "^2.2.2"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
pylint = "^3.1.0"
isort = "^5.13.2"

[tool.poetry.scripts]
launch_chair_api = "chair_api.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py310']

[tool.pylint.format]
max-line-length = 120
expected-line-ending-format = "LF"
max-locals = 20
max-attributes = 10
max-args = 9
extension-pkg-allow-list = ["networkit"]
disable = [
    "duplicate-code",
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
split_on_trailing_comma = true
